--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+# Package Files #
+*.jar
+*.war
+*.ear
+
 *.class
+
+*.~
+
+# Folder and file for eclipe
+.settings
+.classpath
+.project
+
+# Maven target folder
+target/
+logs/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,3 +26,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.DS_Store
