--- a/radiance/module.conf
+++ b/radiance/module.conf
@@ -1,5 +1,11 @@
 {
     "baseUrl": "src",
     "paths": {},
-    "packages": []
+    "packages": [
+        {
+            "name": "etpl",
+            "location": "../dep/etpl/3.0.1/src",
+            "main": "main"
+        }
+    ]
 }
