--- a/radiance/package.json
+++ b/radiance/package.json
@@ -12,7 +12,9 @@
         "srcDir": "src",
         "loaderAutoConfig": "js,htm,html,tpl,vm,phtml",
         "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js",
-        "dependencies": {}
+        "dependencies": {
+            "etpl": "~3.0.1"
+        }
     },
     "dependencies": {},
     "author": "",
