整站的构建脚本

--- a/mekansm/pom.xml
+++ b/mekansm/pom.xml
@@ -9,6 +9,7 @@
 
     <artifactId>mekansm</artifactId>
     <version>${mekansm.version}</version>
+    <name>mekansm</name>
 
     <dependencies>
         <dependency>
